<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:stretchColumns="1"
    >
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitCenter"
        android:src="@drawable/top"
        android:contentDescription="@string/hello"
        />
    <TextView
        android:id="@+id/TextView"
        android:text="@string/welcome"
        android:textSize="@dimen/label_font_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/title_padding"
        />
    <!--输入用户名-->
    <TableRow>
        <TextView
            android:text="@string/user_name"
            android:textSize="@dimen/label_font_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/userEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            />
    </TableRow>
    <!--密码-->
    <TableRow>
        <TextView
            android:text="@string/user_pass"
            android:textSize="@dimen/label_font_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/passEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />
    </TableRow>
    <!--按钮组-->
    <LinearLayout android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center">
        <Button
            android:id="@+id/bnLogin"
            android:text="@string/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/bnCancel"
            android:text="@string/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/bnCheckVersion"
        android:text="监测新版本"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        />
    <Button
        android:id="@+id/createDB"
        android:text="插入数据"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>

<!--    &lt;!&ndash;水平进度条&ndash;&gt;
    <ProgressBar
        android:id="@+id/downBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        style="@android:style/Widget.ProgressBar.Horizontal"/>-->
</TableLayout>
