<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:stretchColumns="1"
    >
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitCenter"
        android:src="@drawable/top"
        android:contentDescription="@string/hello"
        />
    <TextView
        android:id="@+id/TextView"
        android:text="@string/welcomeUser"
        android:textSize="@dimen/label_font_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/title_padding"
        />
    <TableRow>
        <TextView
            android:text="@string/user_name"
            android:textSize="@dimen/label_font_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </TableRow>
    <!--用户编号-->
    <TableRow>
        <TextView
            android:text="@string/user_no"
            android:textSize="@dimen/label_font_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/user_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </TableRow>
</TableLayout>
